# speedjs

./: .env.local.example  .gitignore  CONTRIBUTING.md  chaos.sh  continue.sh  dag_small.sh  debate.sh  demo_trace.sh  dev-brief.sh  dev.sh  dune-project  par.sh  prod.sh  small.sh  speedjs.opam  squad.sh  trace.sh
lib/: dune
lib/agents/: agent.ml  agent.mli  agent_algebra.ml  agent_algebra.mli  agent_spec.ml  agent_spec.mli  parallel_subagent.ml  plan_act.ml  plan_act.mli  plan_state.ml  planner.ml  specs.ml  specs.mli  step.ml  step.mli  sub_agent.ml  workflow.ml  workflow.mli
lib/core/: codec.ml  context.ml  context.mli  conversation.ml  conversation.mli  effects.ml  error.ml  event.ml  id.ml  id.mli  json_decode.ml  layer.ml  memory.ml  session.ml  types.ml
lib/handlers/: chaos.ml  chaos.mli  file_handler.ml  git_checkpoint.ml  git_checkpoint.mli  governor.ml  governor.mli  handlers.ml  log_handler.ml  log_handler.mli  parallel.ml  protection.ml  time_handler.ml  tool_handler.ml  tool_handler.mli
lib/llm/: anthropic.ml  anthropic_req.ml  checkpoint.ml  http.ml  llm_error.ml  llm_handler.ml  llm_handler.mli  sse.ml
lib/orchestrate/: debate.ml  pair.ml  team.ml  topology.ml  topology.mli
lib/runtime/: dune  runtime.ml  runtime.mli  trace.ml  trace.mli
lib/tools/: mcp.ml  skill.ml  skill.mli  tools.ml  tools.mli  workspace_surveyor.ml
test/: dune  smoke.sh  test_agent.ml  test_agent_algebra.ml  test_cache_stability.ml  test_chaos.ml  test_context.ml  test_conversation.ml  test_e2e.ml  test_effects.ml  test_git_checkpoint.ml  test_governor.ml  test_helpers.ml  (+9 more)
(+5 files in other folders)
